--- a/index.html
+++ b/index.html
@@ -125,12 +125,15 @@
                         </span></h4>
                     </div>
                     <div class="panel-body">
-                        <p>Projects</p>
+                        <p>Economics</p>
                         <a href="bmr.html" target="_blank" class="btn btn-default">BMR</a>
-                        <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
-                        <a href="optimlib.html" target="_blank" class="btn btn-default">OptimLib</a>
-                        <a href="statslib.html" target="_blank" class="btn btn-default">StatsLib</a>
                         <a href="trame.html" target="_blank" class="btn btn-default">TraME</a>
+                        <!-- <p><br></p> -->
+                        <p><br>Optimization</p>
+                        <a href="optimlib.html" target="_blank" class="btn btn-default">OptimLib</a>
+                        <p><br>Math and Stats</p>
+                        <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
+                        <a href="statslib.html" target="_blank" class="btn btn-default">StatsLib</a>
                     </div>
                 </div>
             </div>
@@ -141,18 +144,18 @@
                     </div>
                     <div class="panel-body">
                         <p>Research</p>
-                        <a href="#" class="btn btn-default">Link</a>
+                        <a href="#" class="btn btn-default disabled" role="button" aria-disabled>Link</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-2x fa-compass"></i> Teaching</h4>
+                        <h4><i class="fa fa-fw fa-2x fa-graduation-cap"></i> Teaching</h4>
                     </div>
                     <div class="panel-body">
                         <p>Teaching</p>
-                        <a href="#" class="btn btn-default">Link</a>
+                        <a href="#" class="btn btn-default disabled" role="button" aria-disabled>Link</a>
                     </div>
                 </div>
             </div>
