--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                         <a href="bmr.html" target="_blank" class="btn btn-default">BMR</a>
                         <a href="trame.html" target="_blank" class="btn btn-default">TraME</a>
                         <!-- <p><br></p> -->
-                        <p><br>Optimization</p>
+                        <p><hr />Optimization</p>
                         <a href="optimlib.html" target="_blank" class="btn btn-default">OptimLib</a>
-                        <p><br>Math and Stats</p>
+                        <p><hr />Math and Stats</p>
                         <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
                         <a href="statslib.html" target="_blank" class="btn btn-default">StatsLib</a>
                     </div>
