--- a/optimlib.html
+++ b/optimlib.html
@@ -94,6 +94,12 @@ pre {
                             <li><a href="optimlib_docs_sumt.html">SUMT</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Misc<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="optimlib_docs_settings.html">opt_settings</a></li>
+                        </ul>
+                    </li>
                 </ol>
             </div>
         </div>
