--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -141,7 +141,7 @@ bool cg(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 <ul>
     <li><code>double err_tol</code> the value controlling how small $\| \nabla f \|$ should be before 'convergence' is declared.</li>
     <li><code>int iter_max</code> the maximum number of iterations/updates before the algorithm exits.</li>
-    <li><code>int method_cg</code> which updating formula to use; see the details section below.</li>
+    <li><code>int cg_method</code> which updating formula to use; see the details section below.</li>
     <li><code>double cg_restart_threshold</code> the value $\nu$ in the details section below.</li>
 </ul>
 
