--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Welcome 
                 </h1>
             </div>
-            <p><i class="fa fa-exclamation-triangle fa-2x"></i> This site is a work in progress</p>
+            <!-- <p><i class="fa fa-exclamation-triangle fa-2x"></i> This site is a work in progress</p> -->
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
