--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -130,7 +130,7 @@ bool bfgs(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& va
     <li><code>opt_objfn</code> the function to be minimized, taking three arguments: 
         <ul>
             <li><code>vals_inp</code> a vector of inputs;</li>
-            <li><code>grad_out</code> a vector to store the gradient values; and</li>
+            <li><code>grad_out</code> a vector to store the gradient; and</li>
             <li><code>opt_data</code> additional parameters passed to the function.</li>
         </ul>
     <li><code>opt_data</code> additional parameters passed to the function.</li>
