--- a/optimlib_docs_sumt.html
+++ b/optimlib_docs_sumt.html
@@ -114,36 +114,38 @@ pre {
 <p><strong>Function definition:</strong></p>
 <pre class="brush: cpp;">
 bool sumt_int(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-              std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* constr_data)> constr_fn, void* constr_data, double* value_out, optim_opt_settings* opt_params);
+              std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double* value_out, optim_opt_settings* opt_params);
 
 bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* constr_data)> constr_fn, void* constr_data);
+          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data);
 
 bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* constr_data)> constr_fn, void* constr_data, optim_opt_settings& opt_params);
+          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, optim_opt_settings& opt_params);
 
 bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* constr_data)> constr_fn, void* constr_data, double& value_out);
+          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double& value_out);
 
 bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* constr_data)> constr_fn, void* constr_data, double& value_out, optim_opt_settings& opt_params);
+          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double& value_out, optim_opt_settings& opt_params);
 </pre>
 
 <p><strong>Function arguments:</strong></p>
 <ul>
     <li><code>init_out_vals</code> a column vector of initial values; will contain the final values.</li>
-    <li><code>opt_objfn</code> the function to be zeroed-out, taking two arguments: 
+    <li><code>opt_objfn</code> the function to be minimized, taking three arguments: 
         <ul>
-            <li><code>vals_inp</code> a vector of inputs; and</li>
+            <li><code>vals_inp</code> a vector of inputs;</li>
+            <li><code>grad_out</code> a vector to store the gradient; and</li>
             <li><code>opt_data</code> additional parameters passed to the function.</li>
         </ul>
     <li><code>opt_data</code> additional parameters passed to the function.</li>
-    <li><code>jacob_objfn</code> a function producing the jacobian matrix, taking two arguments: 
+    <li><code>constr_fn</code> the constraint functions in vector form, taking three arguments: 
         <ul>
-            <li><code>vals_inp</code> a vector of inputs; and</li>
-            <li><code>jacob_data</code> additional parameters passed to the function.</li>
+            <li><code>vals_inp</code> a vector of inputs;</li>
+            <li><code>jacob_out</code> a matrix to store the jacobian; and</li>
+            <li><code>constr_data</code> additional parameters passed to the constraints.</li>
         </ul>
-    <li><code>jacob_data</code> additional parameters passed to the function.</li>
+    <li><code>constr_data</code> additional parameters passed to the constraints.</li>
     <li><code>opt_params</code> parameters controlling the optimization routine; see below.</li>
 </ul>
 
